tests/ui/type-alias/unresolved-assoc-ty-suggest-trait.eager.stderr
error[E0220]: associated type `Assoc` not found for `T`
  --> $DIR/unresolved-assoc-ty-suggest-trait.rs:11:22
   |
LL | type AssocOf<T> = T::Assoc;
   |                      ^^^^^ there is an associated type `Assoc` in the trait `Trait`
   |
help: consider fully qualifying the associated type
   |
LL | type AssocOf<T> = <T as Trait>::Assoc;
   |                   +  +++++++++

error[E0220]: associated type `Assok` not found for `T`
  --> $DIR/unresolved-assoc-ty-suggest-trait.rs:15:22
   |
LL | type AssokOf<T> = T::Assok;
   |                      ^^^^^ there is a similarly named associated type `Assoc` in the trait `Trait`
   |
help: consider fully qualifying and renaming the associated type
   |
LL | type AssokOf<T> = <T as Trait>::Assoc;
   |                   +  +++++++++  ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0220`.
